# 5By-BE

./: .env.example  .gitignore  AGENTS.md  README.md  build-manifest.json  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 20260210_150500_phase1_core_tables_and_enums.py  20260210_204500_create_openai_response_logs.py  20260210_be1_2_grid_constraints_and_uniqueness.py  20260210_be1_core_data_model.py  6e981156a8e0_add_lobby_to_session_status_enum.py
app/: __init__.py  main.py
app/api/: errors.py  guards.py  health.py  sessions.py
app/cli/: __init__.py  __main__.py  seed_grids.py
app/core/: __init__.py  config.py  constants.py  errors.py  grid_id.py  grid_validation.py  logging.py  middleware.py
app/data/: grids.json
app/db/: __init__.py  base.py  enums.py  session.py
app/game/: __init__.py  sessions.py  state_snapshot.py
app/middleware/: rate_limit.py
app/schemas/: __init__.py  answer_question.py  ask_question.py  create_session.py  enums.py  guess_letter.py  guess_word.py  session_snapshot.py  sessions.py  snapshot.py
app/services/: __init__.py  openai_client.py  rate_limit.py  session_answer.py  session_ask.py  session_create.py  session_guess.py  session_snapshot.py  snapshot_serializer.py  trivia_generator_openai.py  (+1 more)
data/: grids.json
scripts/: seed_grids.py
tests/: test_answer_endpoint.py  test_be_2_2_validation_and_guards.py  test_guess_schemas.py  test_health.py  test_openai_ask_integration.py  test_rate_limiting.py  test_session_guess_service.py  test_sessions_lifecycle.py
(+17 files in other folders)
